Fri Jan 23 22:13:02 1998  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* telnetd.c (telnet, get_default_IM): Instead of using a hardcoded
		IM variable, use one which is dynamically generated from
		the uname() system call.

	* ext.h: Remove definition of DEFAULT_IM, since it's no longer used.

Thu Dec  4 21:32:37 1997  Tom Yu  <tlyu@mit.edu>

	* telnetd.c (doit): Fix up slave buffer length.

Thu Oct 23 13:59:32 1997  Theodore Y. Ts'o  <tytso@mit.edu>

	* state.c (envvarok): Prohibit the passing of TERMCAP, TERMPATH,
		TERMINFO, and HOME, since they can be used to exploit a
		security in tgetent.

Wed Apr  9 23:46:40 1997  Tom Yu  <tlyu@mit.edu>

	* sys_term.c (start_login): Bounds check the constructed "speed"
	passed in to login.

Wed Feb 12 15:22:53 1997  Tom Yu  <tlyu@voltage-multiplier.mit.edu>

	* configure.in: Fix DES425_DEPLIB

Wed Feb  5 22:08:58 1997  Tom Yu  <tlyu@mit.edu>

	* Makefile.in:
	* configure.in: Update to new program build procedure.

Thu Nov  7 15:32:06 1996  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* telnetd.c (main): Check the error return from
 		krb5_init_context(), and print an error message if
 		necessary.

Mon Oct 14 01:55:41 1996  Sam Hartman  <hartmans@mit.edu>

	* utility.c (printsub): Patch from jhawk@bbnplannet.com to deal
 	with bug printing out authentication name. [71]
Sat Sep 21 03:38:31 1996  Sam Hartman  <hartmans@mit.edu>
(printsub): Fix encrypt promise bit option parsing [74]

	* utility.c (ttloop): Continue on eintr.

Tue Sep 10 14:10:41 1996  Tom Yu  <tlyu@mit.edu>

	* telnetd.8: remove ".so man1/header.doc"

Mon Aug 19 23:22:55 1996  Theodore Y. Ts'o  <tytso@mit.edu>

	* state.c (envvarok): Don't allow the environment variable
	 	RESOLV_HOST_CONF to be set for Linux's sake.

Thu Jun 13 17:05:17 1996  Sam Hartman  <hartmans@mit.edu>

	* telnetd.8: Remove documentation of  desupported -u options.

	* sys_term.c: Remove last fragments of PARENT_DOES_UTMP, and
 	remove dependence on utmp.h and utmpx.h
