@@ -1,3 +1,13 @@
+Tue Jan 27 18:27:16 1998  Dan Winship  <danw@mit.edu>
+
+	* telnetd.c (getterminaltype): Null-terminate strings and avoid a
+	buffer overrun.
+
+	* ext.h: make terminaltype a char[] instead of a char * for
+	telnetd.c change
+
+	* state.c (suboption): redo handling of terminaltype
+
 Fri Jan 23 22:13:02 1998  Theodore Ts'o  <tytso@rsts-11.mit.edu>
 
 	* telnetd.c (telnet, get_default_IM): Instead of using a hardcoded
@@ -14,7 +24,7 @@ Thu Oct 23 13:59:32 1997  Theodore Y. Ts'o  <tytso@mit.edu>
 
 	* state.c (envvarok): Prohibit the passing of TERMCAP, TERMPATH,
 		TERMINFO, and HOME, since they can be used to exploit a
-		security in tgetent.
+		security hole in tgetent.
 
 Wed Apr  9 23:46:40 1997  Tom Yu  <tlyu@mit.edu>
 
